updated tests and got general topology working (nw)